# universal-agent-memory

./: .agent-context.json  .gitignore  .uam.json  .uap.json  AGENT.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.pay2u.md  CLAUDE_COMPLIANCE_DEMONSTRATION.md  README.md  SETUP_COMMAND_UPDATE.md  UAP_FINAL_SUMMARY.md  opencode.json  package-lock.json  package.json  universal-agent-protocol-4.1.0.tgz
.beads/: issues.jsonl
.factory/: PROJECT.md  config.json
.github/: pull_request_template.md
.policy-tools/: cd7cf171-9f1a-4abc-814d-22da91e73019_cluster_routing.py
benchmark-results/: AB_COMPARISON_UAM_VS_BASELINE_2026-01-18.md  BALLS_MODE_EVALUATION_2026-01-19.md  UAM_V120_HARBOR_BENCHMARK_2026-01-18.md
benchmarks/: harbor-benchmark-job.yaml
config/: qwen35-settings.json
docs/: BALLS_MODE_SELF_ANALYSIS.md  INDEX.md  MCP_ROUTER_SETUP.md  OPTIMIZATION_OPTIONS.md  SETUP.md  UAM_COMPLETE_ANALYSIS.md  UAP_PROTOCOL.md
scripts/: README.md  generate-comparison-report.ts  install-desktop.sh  install-web.sh  run-anthropic-proxy-continuity.sh  run-dflash-server-continuity.sh  run-full-benchmark.sh  run-hybrid-adaptive-tbench.sh  run-llama-server-continuity.sh  run-terminal-bench.sh  run-uam-benchmark.sh
src/: index.ts
src/uam_harbor/: __init__.py  pre_execution_hooks.py  pyproject.toml  supergenius_agent.py  uam_agent.py
templates/: CLAUDE.template.md  CLAUDE_DROIDS.template.md  CLAUDE_MEMORY.template.md  CLAUDE_WORKFLOWS.template.md  PROJECT.template.md  SCHEMA.md
test/: anthropic-proxy-models.test.ts  mcp-router-filter.test.ts  validation-fixes.test.ts  (+2 more)
(+139 files in other folders)
